2006-02-23  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ tutorial, global: minor changes.

2006-02-23  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* mf/GNUmakefile: add '\' in multi-line "define ... endef"
	blocks (for make 3.80)

	* scm/parser-ly-from-scheme.scm (ly:parse-string-result): add
	\notemode so that user should not have to explicitely type it.

	* scm/define-music-display-methods.scm: various
	fixes (ApplyOutputEvent, ApplyContext; \new, \context and derived
	constructs)

	* input/no-notation/display-lily-tests.ly: new tests for
	\applyOutput and \applyContext

2006-02-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/constrained-breaking.cc: patch by Joe Neeman: "I have
	changed it slightly so that the number of systems returned by
	solve () will be the same as the last value passed to resize
	(). I've also added more documentation, removed casts, fixed style
	problems and put in some recovery if constraints aren't satisfied."

2006-02-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* elisp/lilypond-mode.el (count-matches-as-number): New funtion
	for emacs < 22 compatibility.
	(count-rexp): Use it.
	(LilyPond-string-current-midi, LilyPond-string-all-midi): Remove
	substring juggling (Milan Zamazal).

2006-02-23  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ basic-notation, advanced-notation,
	global.itely, invoking.itely, tutorial,itely:
	minor fixes from mailist.

	* scm/define-markup-commands.scm: improve docs of \filled-box.

2006-02-23  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: changes concern the previous release.

	* input/regression/+.ly: cultivate typographical terminology.

2006-02-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-grob-interfaces.scm (parentheses-interface): add
	padding to parentheses-interface.

	* Documentation/user/GNUmakefile: remove $(CROSS) support from
	Documentation/user/GNUmakefile. Use --disable-documentation for that.

	* VERSION (PATCH_LEVEL): release 2.7.36
